--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
       <div class="d-flex justify-content-between align-items-center mb-3">
         <h2 class="h6 m-0"><i class="bi bi-clock-history me-2"></i>Lihat Sejarah Saringan</h2>
         <div class="d-flex gap-2">
-          <input id="sejarahSearch" class="form-control form-control-sm" placeholder="Cari nama / IC / telefon...">
+          <input id="sejarahSearch" class="form-control form-control-sm" placeholder="Cari dalam jadual (nama / IC / telefon)">
           <button id="btnSejarahReload" class="btn btn-sm btn-outline-secondary"><i class="fa-solid fa-rotate-right"></i> Segar</button>
         </div>
       </div>
@@ -4143,7 +4143,9 @@ const saveNadiStateDebounced = debounce(saveNadiState, 400);
         const title = (item.title || '(Tanpa tajuk)');
         const date = (item.programDate || '');
         const id = item.activityId || '';
-        const meta = `${title} — ${date}`;
+        const staff = (item.staff || "").toString();
+        const note = (item.note || "").toString();
+        const meta = `${title} — ${date} ${staff} ${note}`.trim();
         return `<button class="list-group-item list-group-item-action" data-activity-id="${id}" data-meta="${meta.toLowerCase()}">
           <div class="fw-semibold">${title}</div>
           <div class="small text-muted">${date} &middot; ID: ${id}</div>
@@ -4701,126 +4703,6 @@ if (btn) {
   });
 })();
 </script>
-
-
-<!-- === BEGIN: HOTFIX (fix SCRIPT_URL/ID_TOKEN undefined + Sejarah Saringan loader) === -->
-<script>
-(function(){
-  // 1) Globalkan konfigurasi supaya tidak 'undefined'
-  var DEFAULT_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx6TKE0vDDPO3-36cY7xjacAbGL0HIRKCrORNm-sED9y5NpIeIUk9gyrpiWy-S7vbc/exec';
-  var DEFAULT_GOOGLE_CLIENT_ID = '863564124015-838ksbuk27f0kkomm16hnc3bu608pbrr.apps.googleusercontent.com';
-
-  if (!window.SCRIPT_URL || typeof window.SCRIPT_URL !== 'string' || !/^https?:\/\//i.test(window.SCRIPT_URL)){
-    window.SCRIPT_URL = (typeof SCRIPT_URL === 'string' && SCRIPT_URL) ? SCRIPT_URL : DEFAULT_SCRIPT_URL;
-  }
-  if (!window.GOOGLE_CLIENT_ID || typeof window.GOOGLE_CLIENT_ID !== 'string'){
-    window.GOOGLE_CLIENT_ID = (typeof GOOGLE_CLIENT_ID === 'string' && GOOGLE_CLIENT_ID) ? GOOGLE_CLIENT_ID : DEFAULT_GOOGLE_CLIENT_ID;
-  }
-  if (typeof window.ID_TOKEN !== 'string'){ window.ID_TOKEN = ''; }
-  if (typeof window.STAFF_EMAIL !== 'string'){ window.STAFF_EMAIL = ''; }
-
-  // 2) Pastikan token kekal pada window selepas login Google
-  if (typeof window.handleCredentialResponse === 'function') {
-    var _orig = window.handleCredentialResponse;
-    window.handleCredentialResponse = async function(resp){
-      try{ window.ID_TOKEN = resp && resp.credential ? resp.credential : ''; }catch(_){}
-      return _orig.apply(this, arguments);
-    };
-  }
-
-  // 3) Patch loader "Sejarah Saringan" jika wujud
-  var _origLoadPrograms = window.loadPrograms;
-  window.loadPrograms = async function(){
-    const list = document.getElementById('programList');
-    if (!list) { if (typeof _origLoadPrograms === 'function') return _origLoadPrograms(); else return; }
-    list.innerHTML = '<div class="text-muted text-center p-3">Memuat program…</div>';
-
-    if (!window.ID_TOKEN){
-      list.innerHTML = '<div class="alert alert-warning m-2">Sila log masuk dahulu.</div>';
-      return;
-    }
-    try{
-      const qs = new URLSearchParams({ action:'getNadiActivities', id_token: (window.ID_TOKEN||'') });
-      const res = await fetch(`${window.SCRIPT_URL}?${qs.toString()}`, { credentials:'omit' });
-      const j = await res.json();
-      if (!j || j.status!=='success') throw new Error((j && (j.message||j.code)) || 'Gagal ambil program');
-      const data = Array.isArray(j.data) ? j.data : [];
-      if (!data.length){
-        list.innerHTML = '<div class="text-muted text-center p-3">Tiada rekod ditemui.</div>';
-        return;
-      }
-      const rows = data.map(r=>{
-        const dt = (r.programDate||'').toString();
-        const title = (r.title||'-') + ' — ' + dt;
-        return `<button type="button" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-                  data-activity-id="${(r.activityId||'')}">
-                  <span>${title}</span>
-                  <span class="badge bg-primary rounded-pill">${r.total||0}</span>
-                </button>`;
-      }).join('');
-      list.innerHTML = rows;
-
-      // wire up click -> load detail
-      list.querySelectorAll('[data-activity-id]').forEach(btn=>{
-        btn.addEventListener('click', async () => {
-          const id = btn.getAttribute('data-activity-id');
-          await loadSejarahDetail(id);
-        });
-      });
-    }catch(err){
-      list.innerHTML = `<div class="alert alert-danger m-2">Gagal memuat program: ${err && err.message ? err.message : err}</div>`;
-    }
-  };
-
-  // 4) Helper untuk memuat detail program di jadual kanan (jika belum ada fungsi)
-  async function loadSejarahDetail(activityId){
-    const tbody = document.getElementById('sejarahTable');
-    const titleEl = document.getElementById('programTitleLabel');
-    const dateEl = document.getElementById('programDateLabel');
-    if (!tbody) return;
-    tbody.innerHTML = '<tr><td colspan="13" class="text-center text-muted">Memuat perincian…</td></tr>';
-    try{
-      const qs = new URLSearchParams({ action:'getNadiActivityDetail', id: activityId, id_token: (window.ID_TOKEN||'') });
-      const res = await fetch(`${window.SCRIPT_URL}?${qs.toString()}`, { credentials:'omit' });
-      const j = await res.json();
-      if (!j || j.status!=='success') throw new Error((j && (j.message||j.code)) || 'Gagal ambil detail');
-      const rows = Array.isArray(j.data) ? j.data : [];
-      if (!rows.length){
-        tbody.innerHTML = '<tr><td colspan="13" class="text-center text-muted">Tiada data.</td></tr>';
-        return;
-      }
-      // cuba isi header dari item pertama jika info ada di list kiri (optional)
-      titleEl && (titleEl.textContent = 'Maklumat Program (ID ' + activityId + ')');
-      dateEl && (dateEl.textContent = '');
-
-      const html = rows.map((r,i)=>{
-        const tca = [r.tcaDate||'', r.tcaTime||''].filter(Boolean).join(' ');
-        return `<tr>
-          <td>${i+1}</td>
-          <td>${(r.nama||'')}</td>
-          <td>${(r.noIC||'')}</td>
-          <td>${(r.noTelefon||'')}</td>
-          <td>${(r.alamat||'')}</td>
-          <td>${(r.status||'')}</td>
-          <td>${(r.bp||'')}</td>
-          <td>${(r.pr||'')}</td>
-          <td>${(r.dxt||'')}</td>
-          <td>${(r.bmi||'')}</td>
-          <td>${tca}</td>
-          <td>${(r.tcaStaff||'')}</td>
-          <td>${(r.remark||'')}</td>
-        </tr>`;
-      }).join('');
-      tbody.innerHTML = html;
-    }catch(err){
-      tbody.innerHTML = `<tr><td colspan="13" class="text-center text-danger">Gagal memuat perincian: ${err && err.message ? err.message : err}</td></tr>`;
-    }
-  }
-
-  // 5) Kurangkan amaran COOP (sudah ada meta). Tiada perubahan lain diperlukan di sini.
-})();
-</script>
-<!-- === END: HOTFIX === -->
 
 </body>
 </html>
