--- a/index.html
+++ b/index.html
@@ -1157,8 +1157,7 @@
   // Padanan objek → {nama, ic, telefon, alamat}
   function mapRow(raw) {
     const entries = Object.entries(raw);
-    const pick = (groups) =>
-{
+    const pick = (groups) => {
       // cuba padanan tepat dulu
       for (const [k,v] of entries) {
         const t = canon(k);
